--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,9 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:layout_height="fill_parent"/>
 
 </LinearLayout>
