--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:noshufou="http://schemas.android.com/apk/res/com.handlerexploit.news"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+    
+    <com.handlerexploit.news.widgets.PagerHeader
+        android:id="@+id/pagerHeader"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        noshufou:activeTextColor="@android:color/black"
+        noshufou:inactiveTextColor="@android:color/black"
+        noshufou:showBottomBar="false"
+        noshufou:showTopShadow="true"
+        noshufou:fadingEdgeColorHint="@android:color/white"
+        noshufou:tabTextSize="12dip"
+        noshufou:shadowHeight="4dip"
+        noshufou:tabHeight="4dip"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
