Changed color scheme

--- a/res/layout/article_listitem.xml
+++ b/res/layout/article_listitem.xml
@@ -5,13 +5,26 @@
     android:padding="5dip">
     <com.handlerexploit.news.widgets.RemoteImageView
         android:id="@+id/thumbnail"
-        android:layout_width="48dip"
-        android:layout_height="48dip"
+        android:layout_width="72dip"
+        android:layout_height="72dip"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="5dip"/>
+        android:layout_marginLeft="5dip"
+        android:background="@drawable/placeholder"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/thumbnail"/>
+        android:layout_toLeftOf="@id/thumbnail"
+        android:textSize="14dip"
+        android:textStyle="bold"
+        android:textColor="#292929"/>
+    <TextView
+        android:id="@+id/source"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/thumbnail"
+        android:layout_below="@id/title"
+        android:layout_alignParentBottom="true"
+        android:textSize="14dip"
+        android:textColor="#6e6e6e"/>
 </RelativeLayout>
