--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,13 +9,13 @@
         android:id="@+id/pagerHeader"
         android:layout_width="fill_parent"
         android:layout_height="45dip"
-        android:background="#d3d3d3"
-        noshufou:activeTextColor="#292929"
-        noshufou:inactiveTextColor="#4d4c4c"
+        android:background="@color/header_background"
+        noshufou:activeTextColor="@color/primary_text"
+        noshufou:inactiveTextColor="@color/secondary_text"
         noshufou:showBottomBar="false"
         noshufou:showTopShadow="true"
         noshufou:tabColor="@android:color/white"
-        noshufou:fadingEdgeColorHint="#d3d3d3"
+        noshufou:fadingEdgeColorHint="@color/header_background"
         noshufou:tabTextSize="11dip"
         noshufou:shadowHeight="5dip"
         noshufou:tabHeight="5dip"/>
@@ -25,4 +25,5 @@
         android:background="@android:color/white"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
+    
 </LinearLayout>
