--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:scrollbars">none</item>
         <item name="android:background">@android:color/white</item>
         <item name="android:dividerHeight">1px</item>
-        <item name="android:divider">#d8d8d8</item>
+        <item name="android:divider">@color/header_background</item>
     </style>
     
     <declare-styleable name="PagerHeader">
