Started weather data layer

--- a/res/layout/article_listitem.xml
+++ b/res/layout/article_listitem.xml
@@ -8,16 +8,16 @@
         android:id="@+id/thumbnail"
         android:layout_width="72dip"
         android:layout_height="72dip"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="5dip"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="5dip"
         android:background="@drawable/placeholder"/>
     
     <TextView
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/thumbnail"
-        android:textSize="14dip"
+        android:layout_toRightOf="@id/thumbnail"
+        android:textSize="15dip"
         android:textStyle="bold"
         android:textColor="@color/primary_text"/>
     
@@ -25,10 +25,10 @@
         android:id="@+id/source"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/thumbnail"
+        android:layout_toRightOf="@id/thumbnail"
         android:layout_below="@id/title"
         android:layout_alignParentBottom="true"
-        android:textSize="14dip"
+        android:textSize="15dip"
         android:textColor="@color/secondary_text"/>
     
 </RelativeLayout>
