--- a/res/layout/weather_condition_item.xml
+++ b/res/layout/weather_condition_item.xml
@@ -7,9 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginTop="25dip"
-        android:layout_marginBottom="25dip">
+        android:gravity="center">
         
         <TextView
             android:id="@+id/day"
@@ -18,19 +16,18 @@
             android:singleLine="true"
             android:gravity="center"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>   
+            android:layout_height="wrap_content"/>   
             
         <com.handlerexploit.news.widgets.RemoteImageView
             android:id="@+id/icon"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_marginTop="20dip"
+            android:layout_marginBottom="20dip"
+            android:layout_width="50dip"
+            android:layout_height="50dip"/>
         
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
             
@@ -38,7 +35,8 @@
                 android:id="@+id/high"
                 android:textSize="16dip"
                 android:textColor="@color/primary_text"
-                android:gravity="center"
+                android:gravity="right"
+                android:paddingRight="2.5dip"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"/>
@@ -47,7 +45,8 @@
                 android:id="@+id/low"
                 android:textSize="16dip"
                 android:textColor="@color/secondary_text"
-                android:gravity="center"
+                android:gravity="left"
+                android:paddingLeft="2.5dip"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"/>
