--- a/res/layout/actionbar_weather_section.xml
+++ b/res/layout/actionbar_weather_section.xml
@@ -8,7 +8,7 @@
         android:textSize="18dip"
         android:textColor="@android:color/white"
         android:gravity="center"
-        android:layout_marginLeft="10dip"
+        android:layout_marginLeft="15dip"
         android:layout_alignParentLeft="true"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
@@ -22,7 +22,7 @@
         android:textSize="18dip"
         android:textColor="@android:color/white"
         android:gravity="center"
-        android:layout_marginRight="10dip"
+        android:layout_marginRight="@dimen/actionbar_weather_text_padding_right"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
@@ -33,11 +33,11 @@
     
     <ImageView
         android:id="@+id/weather_small_logo"
-        android:paddingTop="5dip"
-        android:paddingBottom="5dip"
         android:layout_toLeftOf="@id/weather_small_text"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/actionbar_weather_text_padding_left"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"/>
+        android:layout_height="45dip"/>
     
 </RelativeLayout>
