--- a/res/layout/fragment_weather_condition_item.xml
+++ b/res/layout/fragment_weather_condition_item.xml
@@ -18,7 +18,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>   
             
-        <com.handlerexploit.news.widgets.RemoteImageView
+        <ImageView
             android:id="@+id/icon"
             android:layout_marginTop="20dip"
             android:layout_marginBottom="20dip"
