--- a/res/layout/fragment_weather_main.xml
+++ b/res/layout/fragment_weather_main.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="25dip"
         android:orientation="horizontal">
         
-        <com.handlerexploit.news.widgets.RemoteImageView
+        <ImageView
             android:id="@+id/icon"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
