--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Global">
+    <style name="Global" parent="Theme.Sherlock">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:listViewStyle">@style/Widget.ListView</item>
+        <item name="android:actionBarStyle">@style/ActionBar</item>
+        <item name="actionBarStyle">@style/ActionBar</item>
+    </style>
+    
+    <style name="ActionBar" parent="Widget.Sherlock.ActionBar">
+        <item name="background">@color/actionbar_background</item>
+        <item name="android:background">@color/actionbar_background</item>
+        <item name="displayOptions">showCustom</item>
+        <item name="android:displayOptions">showCustom</item>
+        <item name="customNavigationLayout">@layout/actionbar_weather_section</item>
+        <item name="android:customNavigationLayout">@layout/actionbar_weather_section</item>
     </style>
 
     <style name="Widget.ListView" parent="@android:style/Widget.ListView">
